--- a/somo-back/somo/base/templates/base/room_form.html
+++ b/somo-back/somo/base/templates/base/room_form.html
@@ -5,6 +5,7 @@
 <div>
     <form method="POST" action="">
         {% csrf_token %}
+        {{form.as_p}}
 
         <input type="Submit" value="Submit"/>
     </form>
