--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -2,22 +2,44 @@
 
 {% block content %}
 
-<h1>Home Template</h1>
+    <style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+    </style>
 
-<div>
-    <a href="{% url 'create-room' %}">Create Room</a>
-    <div>
-        {% for room in rooms %}
+    <div class="home-container">
+
         <div>
-            <a href="{% url 'update-room' room.id %}">Edit</a>
-            <a href="{% url 'delete-room' room.id %}">Delete</a>
-            <span>@{{room.host.username}}</span>
-            <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-            <small>{{room.topic.name}}</small>
+            <h3>Browse Topics</h3>
             <hr>
+                <div>
+                    <a href="{% url 'home'%}">All</a>
+                </div>
+            {% for topic in topics %}
+                <div>
+                    <a href="{% url 'home'%}?={{ topic.name }}">{{ topic.name }}</a>
+                </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+
+        <div>
+            <a href="{% url 'create-room' %}">Create Room</a>
+
+            <div>
+                {% for room in rooms %}
+                    <div>
+                        <a href="{% url 'update-room' room.id %}">Edit</a>
+                        <a href="{% url 'delete-room' room.id %}">Delete</a>
+                        <span>@{{room.host.username}}</span>
+                        <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                        <small>{{room.topic.name}}</small>
+                        <hr>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-</div>
 
 {% endblock content%}
