Added search functionality to query rooms by topic To fix note in line 8 of base/views.py

--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -19,7 +19,7 @@
                 </div>
             {% for topic in topics %}
                 <div>
-                    <a href="{% url 'home'%}?={{ topic.name }}">{{ topic.name }}</a>
+                    <a href="{% url 'home'%}?q={{ topic.name }}">{{ topic.name }}</a>
                 </div>
             {% endfor %}
         </div>
