--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -25,6 +25,8 @@
         </div>
 
         <div>
+
+            <h5>{{ room_count }} rooms available</h5>
             <a href="{% url 'create-room' %}">Create Room</a>
 
             <div>
