--- a/somo-back/somo/templates/main.html
+++ b/somo-back/somo/templates/main.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     {% include 'navbar.html' %}
+
+    {% if messages %}
+
+        <ul class="messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+
+        </ul>
+
+    {% endif %}
+
     {% block content %}
 
     {% endblock %}
