--- a/somo-back/somo/templates/navbar.html
+++ b/somo-back/somo/templates/navbar.html
@@ -8,5 +8,11 @@
         <input type="text" name="q" placeholder="Search for Rooms ....."/>
     </label>
 </form>
-<a href="{% url 'login'%}">Login</a>
+
+{% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login'%}">Login</a>
+{% endif %}
+
 <hr>
