--- a/somo-back/somo/base/templates/base/room.html
+++ b/somo-back/somo/base/templates/base/room.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+    <style>
+            .room-container{
+                display: grid;
+                grid-template-columns: 3fr 1fr;
+            }
+    </style>
+
     <div class="room-container">
         <div>
                 <h1>{{ room.name }}</h1>
