rendered participants on the sidebar in room.html

--- a/somo-back/somo/base/templates/base/room.html
+++ b/somo-back/somo/base/templates/base/room.html
@@ -41,6 +41,9 @@
         </div>
         <div>
             <h3>Participants</h3>
+            {% for user in participants %}
+                <p>@{{ user.username }}</p>
+            {% endfor %}
             <hr>
         </div>
     </div>
