--- a/somo-back/somo/base/templates/base/room.html
+++ b/somo-back/somo/base/templates/base/room.html
@@ -21,6 +21,7 @@
 
                 {% for message in room_messages %}
                     <div>
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
                         <small>@{{ message.user }} {{ message.created|timesince }}</small>
                         <p>{{ message.body }}</p>
                         <hr>
