--- a/somo-back/somo/base/templates/base/room.html
+++ b/somo-back/somo/base/templates/base/room.html
@@ -21,7 +21,11 @@
 
                 {% for message in room_messages %}
                     <div>
-                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+
+                        {% if request.user == message.user %}
+                            <a href="{% url 'delete-message' message.id %}">Delete</a>
+                        {% endif %}
+
                         <small>@{{ message.user }} {{ message.created|timesince }}</small>
                         <p>{{ message.body }}</p>
                         <hr>
