Recent activity tab

--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -5,7 +5,7 @@
     <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
     </style>
 
@@ -45,6 +45,11 @@
                     </div>
                 {% endfor %}
             </div>
+        </div>
+
+        <div>
+            <h3>Recent Activity</h3>
+
         </div>
     </div>
 
