render recent activity on right hand side

--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -49,7 +49,15 @@
 
         <div>
             <h3>Recent Activity</h3>
+            <hr>
+            {% for message in room_messages %}
+                <div>
+                    <small>@{{ message.user }} {{ message.created|timesince }}</small>
+                    <small>replied to "{{ message.room }}"</small>
 
+                    <p>{{ message }}</p>
+                </div>
+            {% endfor %}
         </div>
     </div>
 
