--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -56,6 +56,10 @@
                     <small>replied to "{{ message.room }}"</small>
 
                     <p>{{ message }}</p>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    {% endif %}
+                    <hr>
                 </div>
             {% endfor %}
         </div>
