--- a/somo-back/somo/base/templates/base/home.html
+++ b/somo-back/somo/base/templates/base/home.html
@@ -12,16 +12,7 @@
     <div class="home-container">
 
         <div>
-            <h3>Browse Topics</h3>
-            <hr>
-                <div>
-                    <a href="{% url 'home'%}">All</a>
-                </div>
-            {% for topic in topics %}
-                <div>
-                    <a href="{% url 'home'%}?q={{ topic.name }}">{{ topic.name }}</a>
-                </div>
-            {% endfor %}
+            {% include 'base/topics_component.html' %}
         </div>
 
         <div>
@@ -48,7 +39,7 @@
         </div>
 
         <div>
-
+            {% include 'base/activity_component.html' %}
         </div>
     </div>
 
