added static folder in root and specified settings.py

--- a/somo-back/somo/templates/main.html
+++ b/somo-back/somo/templates/main.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{% load static%}
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Somo</title>
+      <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
   </head>
   <body>
     {% include 'navbar.html' %}
