removed tailwind files opted to use bootstrap no npm modules had been pushed

--- a/somo-back/somo/base/templates/base/room_form.html
+++ b/somo-back/somo/base/templates/base/room_form.html
@@ -1,13 +1,17 @@
 {% extends 'main.html' %}
-
+{% load bootstrap5%}
+{}
 {% block content %}
 
 <div>
     <form method="POST" action="">
         {% csrf_token %}
+        {% bootstrap_form form %}
         {{form.as_p}}
 
-        <input type="Submit" value="Submit"/>
+        {% buttons %}
+            <input type="Submit" value="Submit" class="btn btn-primary"/>
+        {% endbuttons %}
     </form>
 </div>
 
