--- a/somo-back/somo/templates/main.html
+++ b/somo-back/somo/templates/main.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-{% load static%}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% load bootstrap5%}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Somo</title>
+    <title class="">Somo</title>
   </head>
   <body>
     {% include 'navbar.html' %}
@@ -17,7 +18,7 @@
             {% for message in messages %}
                 <li>{{ message }}</li>
             {% endfor %}
-
+        </ul>
     {% endif %}
 
     {% block content %}
