--- a/somo-back/somo/base/templates/base/feed_component.html
+++ b/somo-back/somo/base/templates/base/feed_component.html
@@ -1,6 +1,6 @@
 <div>
     {% for room in rooms %}
-        <div>
+        <div class="container">
             {% if request.user == room.host %}
                 <a href="{% url 'update-room' room.id %}">Edit</a>
                 <a href="{% url 'delete-room' room.id %}">Delete</a>
@@ -8,7 +8,7 @@
             <a href="{% url 'user-profile' room.host.id%}">@{{ room.host.username }}</a>
             <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
             <small>{{room.topic.name}}</small>
-            <hr>
+
         </div>
     {% endfor %}
 </div>
