styled using bootstrap navbar container

--- a/somo-back/somo/templates/navbar.html
+++ b/somo-back/somo/templates/navbar.html
@@ -2,7 +2,8 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-<div class="navbar">
+<div class="container- fluid">
+    <div class="navbar">
     <a href="/">
         <h1>SOMO</h1>
     </a>
@@ -29,3 +30,6 @@
     <hr>
 
 </div>
+
+</div>
+
