--- a/somo-back/somo/base/templates/base/room.html
+++ b/somo-back/somo/base/templates/base/room.html
@@ -23,7 +23,7 @@
                 <hr>
 
                 {% for message in room_messages %}
-                    <div>
+                    <div class="container">
 
                         {% if request.user == message.user %}
                             <a href="{% url 'delete-message' message.id %}">Delete</a>
@@ -59,7 +59,7 @@
             {% for user in participants %}
                 <p>@{{ user.username }}</p>
             {% endfor %}
-            <hr>
+
         </div>
     </div>
 
