--- a/somo-back/somo/templates/navbar.html
+++ b/somo-back/somo/templates/navbar.html
@@ -2,7 +2,7 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-<div class="container- fluid">
+<div class="container- fluid p-4 m-4">
     <div class="navbar">
     <a class="navbar-brand" href="{% url 'home' %}">
       <img src="../static/images/SOMO-logos.jpeg" alt="" width="240" height="120">
@@ -10,6 +10,9 @@
 
         <form method="GET" action="{% url 'home'%}">
             <label>
+                  {% for field in form %}
+                      {% bootstrap_field field %}
+                  {% endfor %}
                 Search:
                 <input type="text" name="q" placeholder="Search for Rooms ....."/>
             </label>
