--- a/somo-back/somo/base/templates/base/topics_component.html
+++ b/somo-back/somo/base/templates/base/topics_component.html
@@ -1,9 +1,9 @@
-<div class="justify-content-center">
+<div class="justify-content-center border border-success t-4 m-4">
     <div>
         <a href="{% url 'home'%}">All</a>
     </div>
     {% for topic in topics %}
-        <div class="container border p-4 m-4">
+        <div class="container p-4 m-4">
             <p><a href="{% url 'home'%}?q={{ topic.name }}">{{ topic.name }}</a></p>
         </div>
     {% endfor %}
